--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,12 @@ httpx==0.23.3
 beautifulsoup4==4.12.2
 asyncpg==0.27.0
 psycopg2-binary
+Flask==2.3.2
+psycopg2-binary==2.9.10
+playwright==1.32.1
+httpx==0.23.3
+aiosqlite==0.18.0
+asyncpg==0.27.0
+beautifulsoup4==4.12.2
+feedparser==6.0.10
+gunicorn==23.0.0
