--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 Flask==2.3.2
 Flask-SQLAlchemy==3.0.3
-Flask-Migrate==4.0.7  # Add this line
+Flask-Migrate==4.0.7
+Flask-CORS==3.0.10
 feedparser==6.0.10
 playwright==1.32.1
 httpx==0.23.3
 beautifulsoup4==4.12.2
 asyncpg==0.27.0
-psycopg2-binary==2.9.10
+psycopg2-binary==2.9.12
 gunicorn==23.0.0
-Flask-CORS==3.0.10
+tenacity==8.5.0
+python-dotenv==1.0.1
+nltk==3.9.1
