--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ playwright==1.32.1
 httpx==0.23.3
 beautifulsoup4==4.12.2
 asyncpg==0.27.0
-psycopg2-binary==2.9.10  # Updated from 2.9.12
+psycopg2-binary==2.9.10
 gunicorn==23.0.0
 tenacity==8.5.0
 python-dotenv==1.0.1
