--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-Migrate==4.0.7
 Flask-CORS==3.0.10
 feedparser==6.0.10
 playwright==1.32.1
-httpx==0.23.3
+httpx==0.27.2  # Updated from 0.23.3 to resolve conflict with mistralai
 beautifulsoup4==4.12.2
 asyncpg==0.27.0
 psycopg2-binary==2.9.10
@@ -12,4 +12,4 @@ gunicorn==23.0.0
 tenacity==8.5.0
 python-dotenv==1.0.1
 nltk==3.9.1
-mistralai==0.4.2  # Add this line (use the latest version compatible with your Python)
+mistralai==0.4.2
