--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-Migrate==4.0.7
 Flask-CORS==3.0.10
 feedparser==6.0.10
 playwright==1.32.1
-httpx==0.27.2  # Updated from 0.23.3 to resolve conflict with mistralai
+httpx==0.27.2
 beautifulsoup4==4.12.2
 asyncpg==0.27.0
 psycopg2-binary==2.9.10
